<resources>
    <string name="app_name">Tempwallet</string>

    <string name="loans">贷款</string>
    <string name="repayment">还款</string>
    <string name="mine">我的</string>

    <string name="apply_loan">立即申请</string>
    <string name="apply_failed">签约失败，去追梦宝</string>
    <string name="apply_check">审核中</string>


    <string name="my_card">我的银行卡</string>
    <string name="share">分享</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="clear_cache">清除缓存</string>


    <string name="login_phone_hint">请输入手机号码</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="input_hint_pwd">请设置6~16位字符密码</string>
    <string name="protocol_tip">注册即表示同意</string>
    <string name="protocol">《梦想分期注册协议》</string>
</resources>
